force-app/main/default/objects/InternalApproval__c/InternalApproval__c.object-meta.xml
<CustomObject>
    <label>伺い履歴(CRM移行前)</label>
    <nameField>
        <label>伺い履歴名(CRM移行前)</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>