force-app/main/default/objects/InternalApproval__c/fields/Date1__c.field-meta.xml
<CustomField>
    <fullName>Date1__c</fullName>
    <label>伺い完了日1</label>
    <type>Date</type>
</CustomField>