force-app/main/default/objects/InternalApproval__c/fields/Date2__c.field-meta.xml
<CustomField>
    <fullName>Date2__c</fullName>
    <label>伺い完了日2</label>
    <type>Date</type>
</CustomField>