force-app/main/default/objects/InternalApproval__c/fields/Date3__c.field-meta.xml
<CustomField>
    <fullName>Date3__c</fullName>
    <label>伺い完了日3</label>
    <type>Date</type>
</CustomField>