force-app/main/default/objects/InternalApproval__c/fields/InquiryType2__c.field-meta.xml
<CustomField>
    <fullName>InquiryType2__c</fullName>
    <label>伺い種別2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InquiryType</valueSetName>
    </valueSet>
</CustomField>