force-app/main/default/objects/InternalApproval__c/fields/InquiryType3__c.field-meta.xml
<CustomField>
    <fullName>InquiryType3__c</fullName>
    <label>伺い種別3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InquiryType</valueSetName>
    </valueSet>
</CustomField>