force-app/main/default/objects/InternalApproval__c/fields/URL1__c.field-meta.xml
<CustomField>
    <fullName>URL1__c</fullName>
    <label>SharePoint URL1</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>