force-app/main/default/objects/InternalApproval__c/fields/URL2__c.field-meta.xml
<CustomField>
    <fullName>URL2__c</fullName>
    <label>SharePoint URL2</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>