force-app/main/default/objects/InternalApproval__c/fields/URL3__c.field-meta.xml
<CustomField>
    <fullName>URL3__c</fullName>
    <label>SharePoint URL3</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>