force-app/main/default/objects/InternalApproval__c/validationRules/InquiryTypeCheck1.validationRule-meta.xml
<ValidationRule>
    <fullName>InquiryTypeCheck1</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(
        OR(
            AND(
                NOT(ISBLANK(TEXT( InquiryType1__c ))),
                NOT(ISBLANK( Date1__c )),
                LEN ( URL1__c ) &gt; 0
            ),
            AND(
                ISBLANK(TEXT( InquiryType1__c )),
                ISBLANK( Date1__c ),
                 LEN ( URL1__c ) = 0
            )
        )
    ),
    NOT(
        OR(
            $Profile.Name = &apos;システム管理者&apos;,
            $Profile.Name = &apos;データ移行管理者&apos;
        )
    )
)</errorConditionFormula>
    <errorMessage>「伺い種別1」「伺い完了日1」「SharePointURL1」はすべて揃えた上で入力してください。</errorMessage>
</ValidationRule>