force-app/main/default/objects/InternalApproval__c/validationRules/InquiryTypeCheck2.validationRule-meta.xml
<ValidationRule>
    <fullName>InquiryTypeCheck2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(
        OR(
            AND(
                NOT(ISBLANK(TEXT( InquiryType2__c ))),
                NOT(ISBLANK( Date2__c )),
                LEN ( URL2__c ) &gt; 0
            ),
            AND(
                ISBLANK(TEXT( InquiryType2__c )),
                ISBLANK( Date2__c ),
                LEN ( URL2__c ) = 0
            )
        )
    ),
    NOT(
        OR(
            $Profile.Name = &apos;システム管理者&apos;,
            $Profile.Name = &apos;データ移行管理者&apos;
        )
    )
)</errorConditionFormula>
    <errorMessage>「伺い種別2」「伺い完了日2」「SharePointURL2」はすべて揃えた上で入力してください。</errorMessage>
</ValidationRule>