force-app/main/default/objects/InternalApproval__c/validationRules/InquiryTypeCheck4.validationRule-meta.xml
<ValidationRule>
    <fullName>InquiryTypeCheck4</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(
        OR(
            AND(
                NOT(ISBLANK(TEXT( InquiryType4__c ))),
                NOT(ISBLANK( Date4__c )),
                LEN ( URL4__c ) &gt; 0
            ),
            AND(
                ISBLANK(TEXT( InquiryType4__c )),
                ISBLANK( Date4__c ),
                LEN ( URL4__c ) = 0
            )
        )
    ),
    NOT(
        OR(
            $Profile.Name = &apos;システム管理者&apos;,
            $Profile.Name = &apos;データ移行管理者&apos;
        )
    )
)</errorConditionFormula>
    <errorMessage>「伺い種別4」「伺い完了日4」「SharePointURL4」はすべて揃えた上で入力してください。</errorMessage>
</ValidationRule>