force-app/main/default/objects/InternalApproval__c/validationRules/InquiryTypeCheck5.validationRule-meta.xml
<ValidationRule>
    <fullName>InquiryTypeCheck5</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(
        OR(
            AND(
                NOT(ISBLANK(TEXT( InquiryType5__c ))),
                NOT(ISBLANK( Date5__c )),
                LEN ( URL5__c ) &gt; 0
            ),
            AND(
                ISBLANK(TEXT( InquiryType5__c )),
                ISBLANK( Date5__c ),
                LEN ( URL5__c ) = 0
            )
        )
    ),
    NOT(
        OR(
            $Profile.Name = &apos;システム管理者&apos;,
            $Profile.Name = &apos;データ移行管理者&apos;
        )
    )
)</errorConditionFormula>
    <errorMessage>「伺い種別5」「伺い完了日5」「SharePointURL5」はすべて揃えた上で入力してください。</errorMessage>
</ValidationRule>