force-app/main/default/objects/InternalApproval__c/validationRules/InquiryTypeCheck6.validationRule-meta.xml
<ValidationRule>
    <fullName>InquiryTypeCheck6</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(
        OR(
            AND(
                NOT(ISBLANK(TEXT( InquiryType6__c ))),
                NOT(ISBLANK( Date6__c )),
                LEN ( URL6__c ) &gt; 0
            ),
            AND(
                ISBLANK(TEXT( InquiryType6__c )),
                ISBLANK( Date6__c ),
                LEN ( URL6__c ) = 0
            )
        )
    ),
    NOT(
        OR(
            $Profile.Name = &apos;システム管理者&apos;,
            $Profile.Name = &apos;データ移行管理者&apos;
        )
    )
)</errorConditionFormula>
    <errorMessage>「伺い種別6」「伺い完了日6」「SharePointURL6」はすべて揃えた上で入力してください。</errorMessage>
</ValidationRule>